# coil-commerce-control

./: .env  .gitignore  PLAN_PRODUCT_TYPES.md  README.md  bun.lockb  check_payments_table.sql  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  update-sale-debug-summary.md  vite.config.ts
.cursor/rules/: cursorprompt.mdc  global-rule.mdc  make-test.mdc  run-tests.mdc
docs/: COMPLETE-PAYEMENT-STATUS.MD  app-workflow.md  architecture.md  common-errors.md  plan-for-migration.md  simplified-plan.md  soft-delete-implementation.md  sold-products-analytics.md
src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts  splashscreen.html  types.ts
src-tauri/: .env  20240610_invoice_payment_triggers.sql  20240712_fix_invoice_payment_triggers.sql  Cargo.toml  build.rs  exported_db.sqlite  tauri.conf.json
src-tauri/capabilities/: sql.json
src-tauri/db/: app.db  schema.sql
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_basic.sql  002_products.sql  003_add_product_type_to_sale_items.sql  006_add_mock_clients.sql  007_add_is_paid_paid_at_columns.sql  20240320000000_add_product_history.sql  20240607_update_credit_balance_type.sql  20240608_add_invoice_id_to_payments.sql  20240609_add_soft_delete_to_entities.sql  20240610_invoice_payment_triggers.sql  20240709_add_check_number_to_payments.sql  20240713_complete_payment_status_triggers.sql  20240714_add_audit_log_table.sql  20240715_add_soft_delete_to_clients.sql
src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  sync.rs
src-tauri/src/commands/: mod.rs  product_history.rs
src-tauri/src/models/: product_history.rs
src-tauri/tests/: invoice_triggers.rs
src/__tests__/: setup.ts
src/context/: AppContext.tsx  AppSettingsContext.tsx  AuthContext.tsx  InvoiceSettingsContext.tsx  LanguageContext.tsx
src/hooks/: use-sync.ts  useInfiniteAuditLog.ts  useInfiniteClients.ts  useInfiniteInvoices.ts  useInfiniteSales.ts  useInfiniteSoldProducts.ts  useIntersectionObserver.ts  useLocalStorage.ts  useProductHistory.ts
src/lib/: local-data.ts  tauri-api.ts
src/pages/: AuditLog.tsx  Auth.tsx  ClientDetail.tsx  Clients.tsx  Dashboard.tsx  InvoiceDetail.tsx  Invoices.tsx  Login.tsx  Reports - Copy.tsx  Reports.tsx  SaleDetail.tsx  Sales.tsx  Settings.tsx  SoldProductsAnalytics.tsx  import React from 'react';.tsx
src/services/: auditLogService.ts  backupService.ts  clientService.ts  creditService.ts  creditTransactionService.ts  dashboardService.ts  invoiceService.ts  paymentService.ts  productTypes.ts  saleService.ts  salesTypes.ts  settingsService.ts  settingsTypes.ts  soldProductsService.ts  syncService.ts  types.ts
src/stores/: product-store.ts
src/types/: index.ts  mappings.ts  payments.ts  products.ts  sales.ts  supabase.ts  tauri.d.ts
src/utils/: builderService.ts  calculations.ts  excelService.ts  format.ts  numberToWords.ts  pdfGenerator.ts  pdfService.ts  pdfService.tsx  product-calculations.ts  product-validation.ts
supabase/: config.toml
supabase/migrations/: 20231224000000_create_credit_transactions.sql  20240318000000_add_ttc_columns.sql  20240320000000_fix_payments_table.sql  20240320000000_update_payments_structure.sql  20240321000000_add_credit_system.sql  20240321000000_add_payment_method_to_sales.sql  20240321000001_add_payment_deletion_procedure.sql  20240321000001_fix_invoice_columns.sql  (+3 more)
(+58 files in other folders)
