[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5", features = [] }

# Database dependencies
rusqlite = { version = "0.30.0", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }
tokio = { version = "1.36.0", features = ["full"] }

anyhow = "1.0"

# Tauri v2 plugins
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
[profile.dev]
incremental = true