[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# This section tells Cargo what dependencies are needed for the build.rs script.
[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
# These dependencies are required for our build script to work.
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros", "json"] }
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
log = "0.4.20"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
dotenv = "0.15" # Also a dependency for the main app

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
